# zmq-video-receiver

./: .gitignore  CMakeLists.txt
ImitatorWorkera/: CMakeLists.txt
ImitatorWorkera/include/: GenerateProto.h  Reader.h  source.h
ImitatorWorkera/src/: ConvertImage.cpp  GenerateProto.cpp  Reader.cpp  main.cpp
ImitatorWorkera/stories/proto/: Message.proto
Stok/: CMakeLists.txt
Stok/src/: main.cpp
receiver/: CMakeLists.txt
receiver/src/: Analyzer.h  FrameSaver.h  MessageStorage.h  ZmqProxy.h  main.cpp
worker_imitator/: CMakeLists.txt
worker_imitator/include/: ConvertImage.h  GenerateProto.h  Reader.h
worker_imitator/src/: ConvertImage.cpp  Reader.cpp  main.cpp
worker_imitator/stories/proto/: Message.proto
